--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@mui/styled-engine-sc": "6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.7.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "joi": "^17.13.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.11",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
