--- a/package.json
+++ b/package.json
@@ -10,12 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@devexpress/dx-react-core": "^4.0.8",
+    "@devexpress/dx-react-scheduler": "^4.0.8",
+    "@devexpress/dx-react-scheduler-material-ui": "^4.0.8",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.7.0",
+    "@syncfusion/ej2-base": "^26.1.37",
+    "@syncfusion/ej2-buttons": "^26.1.35",
+    "@syncfusion/ej2-calendars": "^26.1.35",
+    "@syncfusion/ej2-compression": "^26.1.35",
+    "@syncfusion/ej2-data": "^26.1.35",
+    "@syncfusion/ej2-dropdowns": "^26.1.35",
+    "@syncfusion/ej2-excel-export": "^26.1.35",
+    "@syncfusion/ej2-file-utils": "^26.1.35",
+    "@syncfusion/ej2-inputs": "^26.1.35",
+    "@syncfusion/ej2-lists": "^26.1.35",
+    "@syncfusion/ej2-navigations": "^26.1.35",
+    "@syncfusion/ej2-popups": "^26.1.35",
+    "@syncfusion/ej2-react-base": "^26.1.35",
+    "@syncfusion/ej2-react-schedule": "^26.1.35",
+    "@syncfusion/ej2-schedule": "^26.1.35",
+    "@syncfusion/ej2-splitbuttons": "^26.1.35",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
