--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
+    "@mui/x-data-grid": "^7.8.0",
     "@mui/x-date-pickers": "^7.7.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
